@@ -141,7 +141,7 @@ dnl
 dnl NOTE: Don't put a '-' in the version number or rpm will puke 
 dnl when building the package.
 dnl
-AM_INIT_AUTOMAKE(avr-libc, 20030227cvs)
+AM_INIT_AUTOMAKE(avr-libc, 20030228cvs)
 
 dnl Use the AC_CHECK_TOOL macro to find also cross tools
 AC_CHECK_TOOL(AS, as, as)
@@ -316,7 +316,7 @@ else
   avr3) avrlib_cflags=${avrlib_opt_speed}
         avrlib_asflags='-mmcu=avr3'
         AVR_CRT_MEGA='crtm103.o'
-        AVR_CRT_OTHER='crt43355.o crt76711.o # crt43320.o'
+        AVR_CRT_OTHER='crt43320.o crt43355.o crt76711.o'
   ;;
   avr4) avrlib_cflags=${avrlib_opt_space}
         avrlib_asflags='-mmcu=avr4'
